# LLMOps

./: Nimble_guide.md  README.md  golden_dataset.csv  index.md  main.py  pyproject.toml  render_test.py  retrieval_test.py  run_eval.py
src/: generation.py  judge.py  prompt_manager.py  retrieval.py
src/prompts/: support_v1.j2
src/security/: input_rail.py  output_rail.py
