[project]
name = "llmops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "jinja2>=3.1.6",
    "langchain-text-splitters>=1.1.1",
    "litellm>=1.83.4",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.0.1",
]
